--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,10 +1,17 @@
 <!-- for more effects see _animate.scss -->
-<h1 class="animated bounceInDown">
-    <div id="headerbg">
-        {{ site.title }}
-    </div>
-</h1>
-<br>
+<ul>
+  <li>
+    <h1 class="animated bounceInDown">
+      <div id="headerbg">
+      <img src="{% gravatar_image %}" alt="Gravatar of {{ site.author}} " title="Gravatar of {{ site.author }}" /> {{ site.title }}
+      </div>
+    </h1>
+  </li>
+  <li>
+    <h1 class="animated bounceInDown">
+    </h1>
+  </li>
+</ul>
 
 {% include social.html %}
 
